--- a/Paginas/Presupuesto.html
+++ b/Paginas/Presupuesto.html
@@ -11,7 +11,8 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <!--Fuentes-->
     <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link href="https://fonts.googleapis.com/css2?family=Dancing+Script&family=Montserrat:wght@200;400&family=Quicksand:wght@300&family=Raleway:wght@100&family=Sacramento&display=swap" rel="stylesheet">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Amatic+SC:wght@700&family=Dancing+Script&family=Kanit:wght@300&family=Montserrat:wght@200;400&family=Open+Sans+Condensed:ital,wght@1,300&family=Raleway:wght@100&display=swap" rel="stylesheet">
     <!--Icons -->
     <script src="https://kit.fontawesome.com/51f0954f1e.js" crossorigin="anonymous"></script>
     <!--Descripcion-->
@@ -23,12 +24,11 @@
 </head>
 <body>
 
-  <header>
+  <header class="menuFont">
     <nav class="navbar navbar-expand-lg navbar-light bg-flodi">
       <div class="container-fluid">
         <div class="logo-container">
-          <a class="navbar-brand" href="#"
-            ><img class="logo" src="../Multimedia/Logo.png" alt=""
+          <a class="navbar-brand" href="../index.html"><img class="logo" src="../Multimedia/FlodiLogo.png" alt=""
           /></a>
         </div>
         <button
@@ -75,14 +75,14 @@
     </nav>
   </header>
 
-    <section class="formularioF">
+    <section class="formularioF container">
         <p class="formularioFlodi">Dejame tus datos para recibir tu presupuesto personalizado a la brevedad</p>
         <div class="mb-3">
-            <label for="exampleFormControlInput1" class="form-label">Email</label>
+            <label for="exampleFormControlInput1" class="form-label formEmail">Email</label>
             <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="name@example.com">
           </div>
           <div class="mb-3">
-            <label for="exampleFormControlTextarea1" class="form-label">Comentarios</label>
+            <label for="exampleFormControlTextarea1" class="form-label formEmail">Comentarios</label>
             <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
           </div>          
           <button type="button" class="btn btn-primary">Enviar</button>
@@ -98,21 +98,37 @@
         <p class="contactoFooter">Datos de contacto</p>
         <ul class="footerFlodi">
           <li>Producciones | Book's | Eventos</li>
-          <li>  <a href="https://www.instagram.com/flodimakeup/" target="_blank"
-            ><i class="fab fa-instagram"></i></a>Instagram</li>
-          <li><a href="https://wa.me/qr/AFEYGK4S6FYNC1" target="_blank"
-            ><i class="fab fa-whatsapp"></i></a>Whatsapp</li>
-          <li><a href="https://www.facebook.com/flodimakeup/?ref=py_c" target="_blank"
-            ><i class="fab fa-facebook"></i></a>Facebook</li>
+          <li>
+            <a href="https://www.instagram.com/flodimakeup/" target="_blank"
+              ><i class="fab fa-instagram"></i></a
+            >Instagram
+          </li>
+          <li>
+            <a href="https://wa.me/qr/AFEYGK4S6FYNC1" target="_blank"
+              ><i class="fab fa-whatsapp"></i></a
+            >Whatsapp
+          </li>
+          <li>
+            <a
+              href="https://www.facebook.com/flodimakeup/?ref=py_c"
+              target="_blank"
+              ><i class="fab fa-facebook"></i></a
+            >Facebook
+          </li>
         </ul>
       </div>
       <div>
-        <img class="logoFooter" src="../Multimedia/Logo.png" alt="Logo">
+        <img class="logoFooter" src="../Multimedia/Logo.png" alt="Logo" />
       </div>
       <div>
-        <iframe class="mapaFooter" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3283.595208925063!2d-58.4927560847701!3d-34.61439608045678!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bcc9dc1a72b2af%3A0x18f668f731771409!2sConcordia%201928%2C%20Buenos%20Aires!5e0!3m2!1ses!2sar!4v1638474291678!5m2!1ses!2sar" width="100%" height="250" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+        <iframe class="mapaFooter" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3283.595208925063!2d-58.4927560847701!3d-34.61439608045678!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bcc9dc1a72b2af%3A0x18f668f731771409!2sConcordia%201928%2C%20Buenos%20Aires!5e0!3m2!1ses!2sar!4v1638474291678!5m2!1ses!2sar"
+          width="100%"
+          height="200"
+          style="border: 0"
+          allowfullscreen=""
+          loading="lazy">
+        </iframe>
       </div>
-
     </footer>
 
   
