--- a/index.html
+++ b/index.html
@@ -13,39 +13,36 @@
       integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
       crossorigin="anonymous"
     />
-    <!--Fuentes-->
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <!--Animaciones-->
     <link
-      href="https://fonts.googleapis.com/css2?family=Dancing+Script&family=Montserrat:wght@200;400&family=Quicksand:wght@300&family=Raleway:wght@100&family=Sacramento&display=swap"
-      rel="stylesheet"
-    />
+    rel="stylesheet"
+    href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
+  />
+    <!--Fuentes-->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Amatic+SC:wght@700&family=Dancing+Script&family=Kanit:wght@300&family=Montserrat:wght@200;400&family=Open+Sans+Condensed:ital,wght@1,300&family=Raleway:wght@100&display=swap" rel="stylesheet">
     <!--Icons -->
     <script
       src="https://kit.fontawesome.com/51f0954f1e.js"
       crossorigin="anonymous"
     ></script>
-    <!--Descripcion-->
-    <meta
-      name="description"
-      content="Sitio web de maquilladora y peinadora profesional"
-    />
-    <!--Palabras clave-->
-    <meta
-      name="keywords"
-      content="maquillaje, profesional, book, quinceañera, peinados, make up, makeup, fotografia, modelos,
-    maquilladora, peinadora, rimel, labial, delineador, automaquilaje, auto maquilaje, clases, servicio de maquillaje"
-    />
-    <!--CSS-->
+    <!--SEO-->
+    <meta name="description" content="Maquillaje y peinado profesional para novias, quinceañeras, books, modelos.
+      Esmaltado tradicional y semipermanente.
+      Perfilado de cejas."/>
+    <meta name="keywords"content="maquillaje, profesional, book, quinceañera, peinados, make up, makeup, fotografia, modelos,
+    maquilladora, peinadora, rimel, labial, delineador, automaquilaje, auto maquilaje, clases, servicio de maquillaje"/>
+    <meta property="og:title" content="Maquillaje y peinado profesional"/>
+        <!--CSS-->
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <header>
+    <header class="menuFont">
       <nav class="navbar navbar-expand-lg navbar-light bg-flodi">
         <div class="container-fluid">
           <div class="logo-container">
-            <a class="navbar-brand" href="#"
-              ><img class="logo" src="multimedia/Logo.png" alt=""
-            /></a>
+            <a class="navbar-brand" href="#"><img class="logo" src="multimedia/FlodiLogo.png" alt=""/></a>
           </div>
           <button
             class="navbar-toggler"
@@ -70,9 +67,7 @@
                 <a class="nav-link" href="Paginas/Trabajos.html">Trabajos</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="Paginas/Presupuesto.html"
-                  >Presupuesto</a
-                >
+                <a class="nav-link" href="Paginas/Presupuesto.html">Presupuesto</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="#indexfooter">Contacto</a>
@@ -93,13 +88,17 @@
         </div>
       </nav>
     </header>
+    <section>
+      <div>
+        <img class="banerFlodi" src="Multimedia/Baner.png" alt="Baner" />
+      </div>
+    </section>
     <section class="flex">
       <div>
         <img
           class="imagen imagen1"
           src="Multimedia/Beauty en estudio00014 (1).png"
-          alt="Portada"
-        />
+          alt="Portada"/>
       </div>
       <div>
         <img
@@ -108,23 +107,21 @@
           alt="Portada"
         />
       </div>
+      
+      <div class="presentacion animate__animated animate__backInDown">
+        <p>
+          Soy Florencia Diaz y hace unos años elegí seguir esta profesión que
+          tanto amo y disfruto hacer.
+        </p>
+        <p>
+          Hoy, quiero brindarte el mejor asesoramiento y hacer que te sientas bien
+          y feliz resaltando tu belleza.
+        </p>       
+
+      </div>
     </section>
 
-    <main class="presentacion">
-      <p>
-        Soy Florencia Diaz y hace unos años elegí seguir esta profesión que
-        tanto amo y disfruto hacer.
-      </p>
-      <p>
-        Hoy, quiero brindarte el mejor asesoramiento y hacer que te sientas bien
-        y feliz resaltando tu belleza ❤️
-      </p>
-      <div>
-        <img class="banerMain" src="Multimedia/Baner.png" alt="Baner" />
-      </div>
-    </main>
-
-    <footer class="footerPrincipal" id="indexfooter">
+      <footer class="footerPrincipal" id="indexfooter">
       <div>
         <p class="contactoFooter">Datos de contacto</p>
         <ul class="footerFlodi">
@@ -154,7 +151,7 @@
       <div>
         <iframe class="mapaFooter" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3283.595208925063!2d-58.4927560847701!3d-34.61439608045678!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bcc9dc1a72b2af%3A0x18f668f731771409!2sConcordia%201928%2C%20Buenos%20Aires!5e0!3m2!1ses!2sar!4v1638474291678!5m2!1ses!2sar"
           width="100%"
-          height="250"
+          height="200"
           style="border: 0"
           allowfullscreen=""
           loading="lazy">
